Fixed overflowing text in case of very long title

--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
 
 :root {
 	font-size: 16px;
-    font-family: "Roboto", "Helvetica", sans-serif;
-    --jet: #353535ff;
-    --caribbean-current: #3c6e71ff;
-    --white: #ffffffff;
-    --platinum: #d9d9d9ff;
-    --indigo-dye: #284b63ff;
-    --burnt-sienna: #ee6c4dff;
+	font-family: "Roboto", "Helvetica", sans-serif;
+	--jet: #353535ff;
+	--caribbean-current: #3c6e71ff;
+	--white: #ffffffff;
+	--platinum: #d9d9d9ff;
+	--indigo-dye: #284b63ff;
+	--burnt-sienna: #ee6c4dff;
 }
 
 * {
@@ -26,7 +26,7 @@
 body {
 	min-height: 100vh;
 	margin: 0px;
-    background-color: rgba(255, 255, 255, 0.871);
+	background-color: rgba(255, 255, 255, 0.871);
 }
 
 .grid-container {
@@ -65,9 +65,9 @@ header {
 }
 
 header > h2 {
-    font-family: Pacifico;
-    font-size: 1.5rem;
-    color: var(--white)
+	font-family: Pacifico;
+	font-size: 1.5rem;
+	color: var(--white);
 }
 
 header > nav {
@@ -85,13 +85,13 @@ nav > ul {
 }
 
 nav a {
-    font-size: 1.2rem;
-    font-weight: 700;
-    color: var(--white);
-} 
+	font-size: 1.2rem;
+	font-weight: 700;
+	color: var(--white);
+}
 
 nav a:hover {
-    border-bottom: 0.3rem solid var(--caribbean-current);
+	border-bottom: 0.3rem solid var(--caribbean-current);
 }
 
 /* ======================== CONTENT ======================== */
@@ -113,43 +113,45 @@ main > #new-book-btn {
 
 .books-container {
 	padding: 2rem;
+    width: 100%;
 
 	display: grid;
-	grid-template-columns: repeat(2, minmax(250px, 500px));
-	grid-auto-rows: 12rem;
+	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+	grid-auto-rows: 14rem;
 	gap: 15px;
 }
 
 .book-item {
 	background-color: white;
-    border: 1px solid var(--caribbean-current);
-    border-left: 0.6rem solid var(--caribbean-current);
+	border: 1px solid var(--caribbean-current);
+	border-left: 0.6rem solid var(--caribbean-current);
 
-    
-    border-radius: 1.8rem;
-	padding: 2rem;
+	border-radius: 1.8rem;
+	padding: 1rem;
 
 	display: grid;
-	grid-template: 1fr 3fr / 1fr 3fr;
-    justify-content: center;
-    align-items: center;
+	grid-template: 3fr 1fr / 1fr 5fr;
+	justify-content: center;
+	align-items: center;
 	gap: 15px;
 }
 
 .book-icon {
 	font-size: 3rem;
-    text-align: center;
+	text-align: center;
 }
 
 .book-data > * {
-    text-align: end;
-    display: flex;
-    justify-content: space-between;
+	text-align: end;
+	display: flex;
+	justify-content: space-between;
+
+    font-size: 1.2rem;
 }
 
 .book-title::before {
 	content: "Title: ";
-    text-align: start;
+	text-align: start;
 }
 
 .book-author::before {
@@ -169,18 +171,18 @@ main > #new-book-btn {
 }
 
 .buttons-container {
-    display: flex;
-    flex-direction: row-reverse;
-    gap: 1rem;
-    grid-column: 2 / 3;
+	display: flex;
+	flex-direction: row-reverse;
+	gap: 1rem;
+	grid-column: 2 / 3;
 }
 
 .delete-book-btn {
-    width: 6rem;
+	width: 6rem;
 }
 
 .mark-read-btn {
-    width: 6rem;
+	width: 6rem;
 }
 
 /* ======================== ADD BOOK MODAL ======================== */
@@ -226,24 +228,31 @@ footer {
 /* ======================== BUTTONS STYLE ======================== */
 
 button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
-    font-weight: 700;
-    border: none;
-    border-radius: 0.8rem;
-    padding: 0.6rem;
-    cursor: pointer;
+	font-weight: 700;
+	border: 0.3rem solid;
+	border-radius: 0.8rem;
+	padding: 0.6rem;
+	cursor: pointer;
 
-    background-color: var(--caribbean-current);
-    color: white;
+	background-color: var(--caribbean-current);
+    border-color: var(--caribbean-current);
+	color: white;
 }
 
 button#new-book-btn {
-    padding: 2rem;
+	padding: 1.5rem;
 }
 
 button.delete-book-btn {
-    background-color: var(--burnt-sienna);
+	background-color: var(--burnt-sienna);
+    border-color: var(--burnt-sienna);
+}
+
+button.delete-book-btn:hover {
+	background-color: var(--white);
+	color: var(--burnt-sienna);
 }
